change some configs

--- a/config
+++ b/config
@@ -93,27 +93,103 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+#bindsym $mod+1 workspace 1
+#bindsym $mod+2 workspace 2
+#bindsym $mod+3 workspace 3
+#bindsym $mod+4 workspace 4
+#bindsym $mod+5 workspace 5
+#bindsym $mod+6 workspace 6
+#bindsym $mod+7 workspace 7
+#bindsym $mod+8 workspace 8
+#bindsym $mod+9 workspace 9
+#bindsym $mod+0 workspace 10
+#
+## move focused container to workspace
+#bindsym $mod+Shift+1 move container to workspace 1
+#bindsym $mod+Shift+2 move container to workspace 2
+#bindsym $mod+Shift+3 move container to workspace 3
+#bindsym $mod+Shift+4 move container to workspace 4
+#bindsym $mod+Shift+5 move container to workspace 5
+#bindsym $mod+Shift+6 move container to workspace 6
+#bindsym $mod+Shift+7 move container to workspace 7
+#bindsym $mod+Shift+8 move container to workspace 8 bindsym $mod+Shift+9 move container to workspace 9
+#bindsym $mod+Shift+0 move container to workspace 10
+
+
+
+# #---Workspace Bindings---# #
+#bindsym $mod+Home		workspace $ws1
+#bindsym $mod+Shift+Home		move container to workspace $ws1
+#bindsym $mod+End		workspace $ws10
+#bindsym $mod+Shift+End		move container to workspace $ws10
+#bindsym $mod+Prior		workspace prev
+#bindsym $mod+Shift+Prior	move container to workspace prev
+#bindsym $mod+Next		workspace next
+#bindsym $mod+Shift+Next		move container to workspace next
+#bindsym $mod+Tab		workspace back_and_forth
+#bindsym $mod+XF86Back		workspace prev
+#bindsym $mod+Shift+XF86Back	move container to workspace prev
+#bindsym $mod+XF86Forward	workspace next
+#bindsym $mod+Shift+XF86Forward	move container to workspace next
+#bindsym $mod+semicolon		workspace next
+#bindsym $mod+apostrophe		split horizontal ;; exec $term
+#bindsym $mod+slash		split vertical ;; exec $term
+#bindsym $mod+Shift+slash	kill
+#bindsym $mod+backslash		workspace back_and_forth
+
+
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
+
+# switch to workspace
+bindsym $mod+1		workspace $ws1
+bindsym $mod+2		workspace $ws2
+bindsym $mod+3		workspace $ws3
+bindsym $mod+4		workspace $ws4
+bindsym $mod+5		workspace $ws5
+bindsym $mod+6		workspace $ws6
+bindsym $mod+7		workspace $ws7
+bindsym $mod+8		workspace $ws8
+bindsym $mod+9		workspace $ws9
+bindsym $mod+0		workspace $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8 bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1	move container to workspace $ws1
+bindsym $mod+Shift+2	move container to workspace $ws2
+bindsym $mod+Shift+3	move container to workspace $ws3
+bindsym $mod+Shift+4	move container to workspace $ws4
+bindsym $mod+Shift+5	move container to workspace $ws5
+bindsym $mod+Shift+6	move container to workspace $ws6
+bindsym $mod+Shift+7	move container to workspace $ws7
+bindsym $mod+Shift+8	move container to workspace $ws8
+bindsym $mod+Shift+9	move container to workspace $ws9
+bindsym $mod+Shift+0	move container to workspace $ws10
+
+
+
+#打开软件时自动移至相应工作区
+assign [class="i3-sensible-terminal"] $WS1
+assign [class="Firefox"] $WS2
+assign [class="vim"] $WS4
+
+
+
+
+
+# open terminal
+
+bindsym $mod+Control+t exec i3-sensible-terminal 
+
+# ranger  -e  do commands
+bindsym $mod+Control+r exec i3-sensible-terminal -e ranger
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -309,7 +385,18 @@ bindsym $mod+Shift+BackSpace    exec --no-startup-id prompt "Reboot computer?" "
 # compton
 # auto start commands
 exec --no-startup-id fcitx -r
-exec --no-startup-id fcitx-qimpanel
+#exec --no-startup-id fcitx-qimpanel
+exec --no-startup-id sogou-qimpanel
 exec --no-startup-id compton -b
+#bindsym $mod+Control+Return exec urxvt -sh 40 #透明参数0-100
+
+
+exec --no-startup-id fcitx-sogoupingyin
+
+
 #Background
 exec --no-startup-id feh --bg-fill /home/itgoyo/cgi_lib.jpg
+#caps:swapescape
+
+exec --no-startup-id setxkbmap -option caps:swapescape
+
