--- a/config
+++ b/config
@@ -30,7 +30,9 @@ font pango:monospace 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal 
+#bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec xfce4-terminal  #支持透明背景
+bindsym $mod+control+t exec xfce4-terminal  #支持透明背景
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -112,7 +114,8 @@ bindsym $mod+a focus parent
 #bindsym $mod+Shift+5 move container to workspace 5
 #bindsym $mod+Shift+6 move container to workspace 6
 #bindsym $mod+Shift+7 move container to workspace 7
-#bindsym $mod+Shift+8 move container to workspace 8 bindsym $mod+Shift+9 move container to workspace 9
+#bindsym $mod+Shift+8 move container to workspace 8
+#bindsym $mod+Shift+9 move container to workspace 9
 #bindsym $mod+Shift+0 move container to workspace 10
 
 
@@ -149,6 +152,18 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+# set $WS1 1:
+# set $WS2 2:
+# set $WS3 3:
+# set $WS4 4:
+# set $WS5 5:
+# set $WS6 6:
+# set $WS7 7:
+# set $WS8 8:
+# set $WS9 9:
+# set $WS10 10:
+
+
 # switch to workspace
 bindsym $mod+1		workspace $ws1
 bindsym $mod+2		workspace $ws2
@@ -158,8 +173,8 @@ bindsym $mod+5		workspace $ws5
 bindsym $mod+6		workspace $ws6
 bindsym $mod+7		workspace $ws7
 bindsym $mod+8		workspace $ws8
-#bindsym $mod+9		workspace $ws9
-#bindsym $mod+0		workspace $ws10
+bindsym $mod+9		workspace $ws9
+bindsym $mod+0		workspace $ws10
 
 # move focused container to workspace
 bindsym $mod+Shift+1	move container to workspace $ws1
@@ -177,13 +192,13 @@ bindsym $mod+Shift+0	move container to workspace $ws10
 
 
 # for sound control
-#bindsym XF86AudioRaiseVolume exec amixer set Master playback 5+ 
-#bindsym XF86AudioLowerVolume exec amixer set Master playback 5- 
+#bindsym XF86AudioRaiseVolume exec amixer set Master playback 5+
+#bindsym XF86AudioLowerVolume exec amixer set Master playback 5-
 #bindsym XF86AudioMute exec amixer set Master toggle
 
 
-bindsym $mod+o exec amixer set Master playback 5- 
-bindsym $mod+p exec amixer set Master playback 5+ 
+bindsym $mod+o exec amixer set Master playback 5-
+bindsym $mod+p exec amixer set Master playback 5+
 #bindsym $mod+o exec amixer set Master toggle
 #bindsym $mod+p exec amixer set PCM toggle
 
@@ -200,7 +215,7 @@ assign [class="i3-sensible-terminal"] $WS1
 
 # open terminal
 
-bindsym $mod+Control+t exec i3-sensible-terminal 
+#bindsym $mod+Control+t exec i3-sensible-terminal
 
 # ranger  -e  do commands
 bindsym $mod+Control+r exec i3-sensible-terminal -e ranger
@@ -222,7 +237,7 @@ mode "resize" {
         # Pressing down will grow the window’s height.
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
+        bindsym l resize shrink height 10 px or 10 pptobs
         bindsym semicolon resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
@@ -230,7 +245,6 @@ mode "resize" {
         bindsym Down resize grow height 10 px or 10 ppt
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
-
         # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -346,13 +360,13 @@ set $warning    #E7176A
 client.focused          $primary    $primary   $foreground $primary
 client.focused_inactive $secondary  $secondary $foreground $secondary
 client.unfocused        $tertiary   $tertiary  $background $tertiary
-#client.urgent           $gray       $gray      $foreground $gray 
+#client.urgent           $gray       $gray      $foreground $gray
 client.urgent           $darkred        $darkred        $black          $darkred                $darkred
 
 
 
 bar {
-    
+
 
 	font pango:mono 10
 	colors {
@@ -381,9 +395,9 @@ bar {
     # 显示位置top/bottom
     position top
     # 是否隐藏
-  #  mode hide
+    #  mode hide
     # 拆解工作区名（隐藏前面的1:2:3:……）
-    strip_workspace_numbers yes
+    # strip_workspace_numbers no
     # 定义分隔符∥
     separator_symbol "    "
 
@@ -403,7 +417,7 @@ exec --no-startup-id fcitx -r
 exec --no-startup-id sogou-qimpanel
 exec --no-startup-id compton -b
 
-bindsym $mod+Control+Return exec urxvt -sh 40 #透明参数0-100
+#bindsym $mod+Control+Return exec urxvt -sh 40 #透明参数0-100
 
 
 exec --no-startup-id fcitx-sogoupingyin
