--- a/config
+++ b/config
@@ -267,7 +267,8 @@ bindsym $mod+r mode "resize"
 #	position top
 #}
 #********************************************i3-gaps*********************************
-for_window [class="^.*"] border pixel 5
+for_window [class="^.*"] border pixel 1
+
 gaps inner 8
 gaps outer 6
 set $mode_gaps Gaps: (o) outer, (i) inner
@@ -283,24 +284,24 @@ mode "$mode_gaps" {
 }
 
 mode "$mode_gaps_inner" {
-        bindsym plus  gaps inner current plus 5
-        bindsym minus gaps inner current minus 5
+        bindsym plus  gaps inner current plus 1
+        bindsym minus gaps inner current minus 1
         bindsym 0     gaps inner current set 0
 
-        bindsym Shift+plus  gaps inner all plus 5
-        bindsym Shift+minus gaps inner all minus 5
+        bindsym Shift+plus  gaps inner all plus 1
+        bindsym Shift+minus gaps inner all minus 1
         bindsym Shift+0     gaps inner all set 0
 
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
 mode "$mode_gaps_outer" {
-        bindsym plus  gaps outer current plus 5
-        bindsym minus gaps outer current minus 5
+        bindsym plus  gaps outer current plus 1
+        bindsym minus gaps outer current minus 1
         bindsym 0     gaps outer current set 0
 
-        bindsym Shift+plus  gaps outer all plus 5
-        bindsym Shift+minus gaps outer all minus 5
+        bindsym Shift+plus  gaps outer all plus 1
+        bindsym Shift+minus gaps outer all minus 1
         bindsym Shift+0     gaps outer all set 0
 
         bindsym Return mode "default"
@@ -430,7 +431,8 @@ exec --no-startup-id fcitx-sogoupingyin
 
 
 #Background
-exec --no-startup-id feh --bg-fill /home/itgoyo/cgi_lib.jpg
+#exec --no-startup-id feh --bg-fill /home/itgoyo/cgi_lib.jpg
+exec --no-startup-id feh --bg-fill /home/itgoyo/图片/bg04.jpg
 #caps:swapescape
 
 
