--- a/config
+++ b/config
@@ -37,6 +37,10 @@ bindsym $mod+control+t exec xfce4-terminal  #支持透明背景
 
 # 快速打开ncmpcpp
 bindsym $mod+n exec xfce4-terminal -e ncmpcpp  #支持透明背景
+# 快速shutter截图
+
+bindsym $mod+control+a exec xfce4-terminal -e shutter  #支持透明背景
+
 
 # kill focused window
 bindsym $mod+Shift+q kill
