--- a/config
+++ b/config
@@ -46,11 +46,16 @@ bindsym $mod+control+a exec xfce4-terminal -e shutter  #支持透明背景
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+Shift+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 #bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+
+#Rofi启动器
+bindsym $mod+Tab exec --no-startup-id rofi -show window
+bindsym $mod+d exec --no-startup-id rofi -show drun -theme andrea.rasi
+
 bindsym $mod+g exec google-chrome --proxy-server='127.0.0.1:8080'
 
 # change focus
